--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -828,6 +828,7 @@ body {
 }
 .gallery__container-image {
 	overflow: hidden;
+	height: 25rem;
 }
 .gallery__image {
 	transition: all 300ms ease-in-out;
@@ -1052,10 +1053,11 @@ body {
 	box-shadow: 0 10px 10px -8px var(--color-border-reviews);
 	border-radius: 0rem 3rem 3rem 0rem;
 	transition: all 200ms ease-in-out;
-	margin-left: 0;
-	background-color: var(--color-background-language);
+	margin-left: 0; /* 
+	background-color: var(--color-background-language); */
 	color: var(--color-principal);
 	font-size: 2rem;
+	background-color: rgba(255, 0, 0, 0, 0.5);
 }
 .idiom__btn:hover {
 	border: 2px solid var(--color-principal);
